--- a/lang/uz.json
+++ b/lang/uz.json
@@ -1,11 +1,45 @@
 {
-  "card": {
-    "title": "Saytimizga xush kelibsiz!",
-    "description": "Biz professional PHP loyihalarini yaratamiz.",
-    "button": "Batafsil"
-  },
-  "footer": {
-    "contact": "Bog‘lanish",
-    "copyright": "Barcha huquqlar himoyalangan."
-  }
+    "site": {
+        "title": "Ko‘p tilli PHP veb-sayti"
+    },
+    "navbar": {
+        "brand": "MeningKompaniyam",
+        "home": "Bosh sahifa",
+        "about": "Biz haqimizda",
+        "services": "Xizmatlar",
+        "contact": "Bog‘lanish"
+    },
+    "hero": {
+        "title": "Ko‘p tilli saytimizga xush kelibsiz!",
+        "subtitle": "Biz PHP asosida ko‘p tilli, zamonaviy saytlar yaratamiz.",
+        "button": "Boshlash"
+    },
+    "card": {
+        "title": "Tezkor dasturlash",
+        "description": "Biz tez va toza PHP ilovalarni yaratamiz.",
+        "button": "Batafsil"
+    },
+    "card2": {
+        "title": "Kuchli imkoniyatlar",
+        "description": "Hamma zamonaviy funksiyalarni bitta platformada taqdim etamiz.",
+        "button": "O‘rganing"
+    },
+    "card3": {
+        "title": "Xavfsiz tizimlar",
+        "description": "Ma'lumotlaringiz bizning xavfsiz arxitekturamizda himoyalangan.",
+        "button": "Himoyalang"
+    },
+    "contact": {
+        "title": "Biz bilan bog‘laning",
+        "nameLabel": "Ismingiz",
+        "emailLabel": "Elektron pochta",
+        "messageLabel": "Xabaringiz",
+        "sendButton": "Xabar yuborish"
+    },
+    "footer": {
+        "contact": "Yordam kerakmi? Istalgan vaqtda bog‘laning.",
+        "about": "Kompaniyamiz haqida",
+        "terms": "Foydalanish shartlari",
+        "copyright": "© 2025 Barcha huquqlar himoyalangan."
+    }
 }
