--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,11 +1,45 @@
 {
-    "card": {
-        "title": "Добро пожаловать на наш сайт!",
-        "description": "Мы создаём профессиональные проекты на PHP.",
-        "button": "Узнать больше"
-    },
-    "footer": {
-        "contact": "Связаться с нами",
-        "copyright": "Все права защищены."
-    }
+  "site": {
+    "title": "Многоязычный PHP сайт"
+  },
+  "navbar": {
+    "brand": "МояКомпания",
+    "home": "Главная",
+    "about": "О нас",
+    "services": "Услуги",
+    "contact": "Контакты"
+  },
+  "hero": {
+    "title": "Добро пожаловать на наш многоязычный сайт!",
+    "subtitle": "Мы создаём современные многоязычные сайты на PHP.",
+    "button": "Начать"
+  },
+  "card": {
+    "title": "Быстрая разработка",
+    "description": "Мы создаём быстрые и чистые PHP-приложения.",
+    "button": "Подробнее"
+  },
+  "card2": {
+    "title": "Мощные функции",
+    "description": "Все современные возможности — на одной платформе.",
+    "button": "Изучить"
+  },
+  "card3": {
+    "title": "Безопасные системы",
+    "description": "Ваши данные защищены нашей надёжной архитектурой.",
+    "button": "Защитить"
+  },
+  "contact": {
+    "title": "Свяжитесь с нами",
+    "nameLabel": "Имя",
+    "emailLabel": "Эл. почта",
+    "messageLabel": "Сообщение",
+    "sendButton": "Отправить сообщение"
+  },
+  "footer": {
+    "contact": "Нужна помощь? Свяжитесь с нами в любое время.",
+    "about": "О нашей компании",
+    "terms": "Условия использования",
+    "copyright": "© 2025 Все права защищены."
+  }
 }
