--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,9 +1,9 @@
 {
   "site": {
-    "title": "Многоязычный PHP сайт"
+    "title": "Многоязычный javascript сайт"
   },
   "navbar": {
-    "brand": "МояКомпания",
+    "brand": "Language Switcher",
     "home": "Главная",
     "about": "О нас",
     "services": "Услуги",
@@ -11,12 +11,12 @@
   },
   "hero": {
     "title": "Добро пожаловать на наш многоязычный сайт!",
-    "subtitle": "Мы создаём современные многоязычные сайты на PHP.",
+    "subtitle": "Мы создаём современные многоязычные сайты на javascript.",
     "button": "Начать"
   },
   "card": {
     "title": "Быстрая разработка",
-    "description": "Мы создаём быстрые и чистые PHP-приложения.",
+    "description": "Мы создаём быстрые и чистые javascript-приложения.",
     "button": "Подробнее"
   },
   "card2": {
