--- a/lang/tj.json
+++ b/lang/tj.json
@@ -1,9 +1,9 @@
 {
     "site": {
-        "title": "Вебсайти бисёрзабонаи PHP"
+        "title": "Вебсайти бисёрзабонаи javascript"
     },
     "navbar": {
-        "brand": "ШиркатиМан",
+        "brand": "Language Switcher",
         "home": "Саҳифаи асосӣ",
         "about": "Дар бораи мо",
         "services": "Хизматҳо",
@@ -11,12 +11,12 @@
     },
     "hero": {
         "title": "Хуш омадед ба сомонаи бисёрзабонаи мо!",
-        "subtitle": "Мо сомонаҳои муосиру бисёрзабонро бо истифода аз PHP месозем.",
+        "subtitle": "Мо сомонаҳои муосиру бисёрзабонро бо истифода аз javascript месозем.",
         "button": "Оғоз кунед"
     },
     "card": {
         "title": "Рушди тез",
-        "description": "Мо барномаҳои PHP-ро зуд ва пок месозем.",
+        "description": "Мо барномаҳои javascript-ро зуд ва пок месозем.",
         "button": "Бештар хонед"
     },
     "card2": {
