--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,45 +1,49 @@
 {
-  "site": {
-    "title": "Многоязычный javascript сайт"
-  },
-  "navbar": {
-    "brand": "Language Switcher",
-    "home": "Главная",
-    "about": "О нас",
-    "services": "Услуги",
-    "contact": "Контакты"
-  },
-  "hero": {
-    "title": "Добро пожаловать на наш многоязычный сайт!",
-    "subtitle": "Мы создаём современные многоязычные сайты на javascript.",
-    "button": "Начать"
-  },
-  "card": {
-    "title": "Быстрая разработка",
-    "description": "Мы создаём быстрые и чистые javascript-приложения.",
-    "button": "Подробнее"
-  },
-  "card2": {
-    "title": "Мощные функции",
-    "description": "Все современные возможности — на одной платформе.",
-    "button": "Изучить"
-  },
-  "card3": {
-    "title": "Безопасные системы",
-    "description": "Ваши данные защищены нашей надёжной архитектурой.",
-    "button": "Защитить"
-  },
-  "contact": {
-    "title": "Свяжитесь с нами",
-    "nameLabel": "Имя",
-    "emailLabel": "Эл. почта",
-    "messageLabel": "Сообщение",
-    "sendButton": "Отправить сообщение"
-  },
-  "footer": {
-    "contact": "Нужна помощь? Свяжитесь с нами в любое время.",
-    "about": "О нашей компании",
-    "terms": "Условия использования",
-    "copyright": "© 2025 Все права защищены."
-  }
+    "site": {
+        "title": "Многоязычный javascript сайт"
+    },
+    "navbar": {
+        "brand": "Language Switcher",
+        "home": "Главная",
+        "about": "О нас",
+        "services": "Услуги",
+        "contact": "Контакты"
+    },
+    "hero": {
+        "title": "Добро пожаловать на наш многоязычный сайт!",
+        "subtitle": "Мы создаём современные многоязычные сайты на javascript.",
+        "button": "Начать"
+    },
+    "features": {
+        "title": "Почему выбирают нас?",
+        "desc": "Мы объединяем скорость, безопасность и современные технологии для создания сайтов мирового уровня."
+    },
+    "card": {
+        "title": "Быстрая разработка",
+        "description": "Мы создаём быстрые и чистые javascript-приложения.",
+        "button": "Подробнее"
+    },
+    "card2": {
+        "title": "Мощные функции",
+        "description": "Все современные возможности — на одной платформе.",
+        "button": "Изучить"
+    },
+    "card3": {
+        "title": "Безопасные системы",
+        "description": "Ваши данные защищены нашей надёжной архитектурой.",
+        "button": "Защитить"
+    },
+    "contact": {
+        "title": "Свяжитесь с нами",
+        "nameLabel": "Имя",
+        "emailLabel": "Эл. почта",
+        "messageLabel": "Сообщение",
+        "sendButton": "Отправить сообщение"
+    },
+    "footer": {
+        "contact": "Нужна помощь? Свяжитесь с нами в любое время.",
+        "about": "О нашей компании",
+        "terms": "Условия использования",
+        "copyright": "© 2025 Все права защищены."
+    }
 }
