--- a/lang/tj.json
+++ b/lang/tj.json
@@ -14,6 +14,10 @@
         "subtitle": "Мо сомонаҳои муосиру бисёрзабонро бо истифода аз javascript месозем.",
         "button": "Оғоз кунед"
     },
+    "features": {
+        "title": "Чаро моро интихоб мекунед?",
+        "desc": "Мо суръат, амният ва технологияҳои муосирро барои сохтани сайтҳои сатҳи ҷаҳонӣ якҷо мекунем."
+    },
     "card": {
         "title": "Рушди тез",
         "description": "Мо барномаҳои javascript-ро зуд ва пок месозем.",
